<resources>
    <string name="app_name">Centanet</string>
    <string name="app_version">1.0.0</string>
    <string name="exit_message">再按一下退出程序!</string>

    <!--login activity-->
    <string name="user_name_hint">请输入登录名</string>
    <string name="user_password_hint">请输入登录密码</string>
    <string name="user_login_btn">登录</string>

    <string name="login_success">登录成功!</string>
    <string name="login_fail">登录失败,请检查用户名和密码!</string>
    <string name="net_work_error">网络故障或联系系统管理员!</string>

    <!--home activity-->
    <string name="mi_sale">附近出售</string>
    <string name="mi_rent">附近出租</string>
    <string name="mi_see">约看房源</string>
    <string name="mi_myhouse">我的房源</string>
    <string name="mi_keymanage">钥匙管理</string>
    <string name="mi_collection">我的收藏</string>
    <string name="mi_diancollection">店组收藏</string>
    <string name="mi_mycustomer">我的客源</string>
    <string name="mi_potentialcustomer">我的潜客</string>
    <string name="mi_myimport">我的导入客</string>
    <string name="mi_grabhouse">抢公房</string>
    <string name="mi_grabcustomer">抢公客</string>
    <string name="mi_password">输PIN码</string>
    <string name="mi_scan">扫一扫</string>
    <string name="mi_logout">登出</string>

    <!--search bar-->
    <string name="search_btn">搜索</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="search_advance">高级筛选</string>

</resources>
