<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:menuitem="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:background="@color/transparent_half_darker_darker_dark"
    android:layout_gravity="left">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.centanet.turman.ui.widget.MenuItem
                android:id="@+id/mi_sale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mi_sale"
                android:drawableLeft="@mipmap/homeside_sell_icon"
                menuitem:lft_img_width="16"
                menuitem:lft_img_height="16"
                style="@style/menu_item" />
            <com.centanet.turman.ui.widget.MenuItem
                android:id="@+id/mi_rent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mi_rent"
                android:drawableLeft="@mipmap/homeside_rent_icon"
                menuitem:lft_img_width="16"
                menuitem:lft_img_height="16"
                style="@style/menu_item"
                />
            <com.centanet.turman.ui.widget.MenuItem
                android:id="@+id/mi_see"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mi_see"
                android:drawableLeft="@mipmap/homeside_see_icon"
                menuitem:lft_img_width="16"
                menuitem:lft_img_height="16"
                style="@style/menu_item"
                />
            <com.centanet.turman.ui.widget.MenuItem
                android:id="@+id/mi_myhouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mi_myhouse"
                android:drawableLeft="@mipmap/homeside_myhouse_icon"
                menuitem:lft_img_width="16"
                menuitem:lft_img_height="16"
                style="@style/menu_item"
                />
            <com.centanet.turman.ui.widget.MenuItem
                android:id="@+id/mi_keymanage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mi_keymanage"
                android:drawableLeft="@mipmap/homeside_rent_icon"
                menuitem:lft_img_width="16"
                menuitem:lft_img_height="16"
                style="@style/menu_item"
                />
            <com.centanet.turman.ui.widget.MenuItem
                android:id="@+id/mi_collection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mi_collection"
                android:drawableLeft="@mipmap/homeside_rent_icon"
                menuitem:lft_img_width="16"
                menuitem:lft_img_height="16"
                style="@style/menu_item"
                />
            <com.centanet.turman.ui.widget.MenuItem
                android:id="@+id/mi_diancollection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mi_diancollection"
                android:drawableLeft="@mipmap/homeside_grabhouse_icon"
                menuitem:lft_img_width="16"
                menuitem:lft_img_height="16"
                style="@style/menu_item"
                />
            <com.centanet.turman.ui.widget.MenuItem
                android:id="@+id/mi_mycustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mi_mycustomer"
                android:drawableLeft="@mipmap/homeside_mycustomer_icon"
                menuitem:lft_img_width="16"
                menuitem:lft_img_height="16"
                style="@style/menu_item"
                />
            <com.centanet.turman.ui.widget.MenuItem
                android:id="@+id/mi_potentialcustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mi_potentialcustomer"
                android:drawableLeft="@mipmap/homeside_mycustomer_icon"
                menuitem:lft_img_width="16"
                menuitem:lft_img_height="16"
                style="@style/menu_item"
                />
            <com.centanet.turman.ui.widget.MenuItem
                android:id="@+id/mi_myimport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mi_myimport"
                android:drawableLeft="@mipmap/homeside_mycustomer_icon"
                menuitem:lft_img_width="16"
                menuitem:lft_img_height="16"
                style="@style/menu_item"
                />
            <com.centanet.turman.ui.widget.MenuItem
                android:id="@+id/mi_grabhouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mi_grabhouse"
                android:drawableLeft="@mipmap/homeside_grabhouse_icon"
                menuitem:lft_img_width="16"
                menuitem:lft_img_height="16"
                style="@style/menu_item"
                />
            <com.centanet.turman.ui.widget.MenuItem
                android:id="@+id/mi_grabcustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mi_grabcustomer"
                android:drawableLeft="@mipmap/homeside_mycustomer_icon"
                menuitem:lft_img_width="16"
                menuitem:lft_img_height="16"
                style="@style/menu_item"/>
            <com.centanet.turman.ui.widget.MenuItem
                android:id="@+id/mi_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mi_logout"
                android:drawableLeft="@mipmap/homeside_grabhouse_icon"
                menuitem:lft_img_width="16"
                menuitem:lft_img_height="16"
                style="@style/menu_item"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>