<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:background="@color/slightGray"
        android:padding="5dp">

        <com.centanet.turman.ui.widget.ClearableEdit
            android:id="@+id/search_input"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="35dp"
            android:background="@drawable/search_input_background"
            android:hint="@string/search_hint"
            android:textSize="16sp"
            android:drawableLeft="@mipmap/searchg_g"
            android:drawablePadding="5dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="35dp"
            android:text="@string/search_btn"
            android:id="@+id/search_btn"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/search_advance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_advance"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/blue"
        android:background="@color/slightGray"
        />

</LinearLayout>
