<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/beijing"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparent">

        <TextView
            android:id="@+id/tv_topText_UserLoginActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="三级市场销售平台"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/top_text_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_topText_UserLoginActivity"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="36sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="8dp">

        <com.centanet.turman.ui.widget.ClearableEdit
            android:id="@+id/et_userName"
            android:drawableLeft="@drawable/ures"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:hint="@string/user_name_hint"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/gray_text_login_input"
            android:textSize="14sp"
            android:drawablePadding="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/login_input_background"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"></View>
        <com.centanet.turman.ui.widget.ClearableEdit
            android:id="@+id/et_password"
            android:drawableLeft="@drawable/press"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:hint="@string/user_password_hint"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/gray_text_login_input"
            android:textSize="14sp"
            android:drawablePadding="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/login_input_background"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"></View>

        <Button
            android:background="@drawable/bg_login_button"
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:text="登录"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparent"></LinearLayout>

</LinearLayout>